--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flux Proxy</title>
     <style>
-    @keyframes rainbow {
+        @keyframes rainbow {
             16.66%   { color: violet; }
-            16.66%  { color: indigo; }
-            33.33%  { color: blue; }
-            100% { color: red; }
-    }
+            16.66%   { color: indigo; }
+            33.33%   { color: blue; }
+            100%     { color: red; }
+        }
+
         body {
             background-color: #0D1517;
             color: #fff;
@@ -19,8 +20,22 @@
             padding: 0;
             display: flex;
             flex-direction: column;
-            min-height: 100vh; /* Ensure body takes at least full viewport height */
-            text-align: center; /* Center text horizontally */
+            min-height: 100vh;
+            text-align: center;
+        }
+
+        header {
+            border-bottom: 1px solid #fff;
+            padding: 10px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        header img {
+            margin-right: 10px; /* Adjust as needed for spacing between image and text */
+            max-height: 30px; /* Set a maximum height for the image */
+            width: auto;
         }
 
         h1 {
@@ -34,7 +49,7 @@
             background-color: #007BFF;
             color: #fff;
             padding: 10px;
-            margin: auto; /* Center horizontally and vertically */
+            margin: auto;
             border: none;
             cursor: pointer;
         }
@@ -42,7 +57,7 @@
         .vertical-center {
             display: flex;
             flex-direction: column;
-            justify-content: flex-start; 
+            justify-content: center; /* Updated to center vertically */
             align-items: center;
             flex: 1;
         }
@@ -50,19 +65,26 @@
         footer {
             padding: 10px;
             background-color: #0D1517;
-            text-align: center; 
+            text-align: center;
             font-size: 10px;
+            flex-shrink: 0; /* Prevent footer from shrinking */
         }
 
         footer p {
-            margin: 0; /* Remove default margin for better styling */
+            margin: 0;
             color: rgba(255, 255, 255, 0.5);
         }
     </style>
 </head>
-<body class="vertical-center">
-    <h1>Flux Proxy For Android</h1>
-    <button onclick="buttonClicked('Button 1')">Button 1</button>
+<body>
+    <header>
+        <img src="https://fluxapp.my.id/assets/flux.png" alt="Flux Logo">
+        <span>Flux Proxy</span>
+    </header>
+
+    <div class="vertical-center">
+        <button onclick="buttonClicked('Button 1')">Button 1</button>
+    </div>
 
     <!-- Footer Section -->
     <footer>
